--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   body {
     font-family: "Times New Roman", Times, serif;
-    background-image: url('background_image.jpg'); /* Replace 'background_image.jpg' with the path to your image */
+    background-image: url('https://raw.githubusercontent.com/Peterson-Arkin-De-Leon/Index.html/main/Trtr.jpg'); /* Replace 'background_image.jpg' with the path to your image */
     background-size: cover;
   }
   .container {
