--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
   }
   .container {
     width: 400px;
-    margin: 100px auto;
+    margin: 100px auto; /* Center the container horizontally */
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   .login-heading {
     font-weight: bold;
@@ -27,7 +31,7 @@
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   }
-  .form-box input {
+  .form-box input, .form-box select {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
@@ -53,25 +57,7 @@
 </style>
 </head>
 <body>
-<div class="container">
-  <div class="login-heading">Log In</div> <!-- Added spaces before Log In -->
-  <div class="form-box login-form">
-    <form id="loginForm">
-      <input type="text" placeholder="Gmail">
-      <br>
-      <input type="password" placeholder="Password">
-      <br>
-      <div style="display: flex; align-items: center;">
-        <input type="checkbox" id="remember"> <label for="remember" style="margin-left: 5px;">Remember Password</label>
-      </div>
-      <br>
-      <input type="submit" value="Login" style="width: 100%; padding: 10px; background-color: magenta; color: white; border: none; border-radius: 5px; cursor: pointer;">
-    </form>
-  </div>
-  <div class="forgot-password"><a href="#" id="signupLink">Don't Have an account? Sign Up</a></div>
-</div>
-
-<div class="container" style="display: none;" id="signupContainer">
+<div class="container" id="signupContainer">
   <div class="login-heading">Sign Up</div>
   <div class="form-box signup-form">
     <form id="signupForm">
@@ -83,20 +69,42 @@
       <br>
       <input type="password" placeholder="Confirm Password">
       <br>
-      <input type="checkbox" id="male"><label for="male">Male</label>
-      <input type="checkbox" id="female"><label for="female">Female</label>
+      Gender:
+      <input type="radio" id="male" name="gender" value="male"><label for="male">Male</label>
+      <input type="radio" id="female" name="gender" value="female"><label for="female">Female</label>
       <br>
-      <select name="birthday">
-        <option value="day">Day</option>
+      Birthday:
+      <select name="day">
+        <option value="">Day</option>
+        <!-- Adding days from 1 to 31 -->
+        <option value="1">1</option>
+        <option value="2">2</option>
         <!-- Add more options for days -->
+        <option value="31">31</option>
       </select>
-      <select name="birthday">
-        <option value="month">Month</option>
-        <!-- Add more options for months -->
+      <select name="month">
+        <option value="">Month</option>
+        <!-- Adding months from Jan to Dec -->
+        <option value="Jan">Jan</option>
+        <option value="Feb">Feb</option>
+        <option value="Mar">Mar</option>
+        <option value="Apr">Apr</option>
+        <option value="May">Feb</option>
+        <option value="Jun">Feb</option>
+        <option value="Jul">Feb</option>
+        <option value="Aug">Feb</option>
+        <option value="Sep">Feb</option>
+        <option value="Oct">Feb</option>
+        <option value="Nov">Feb</option>
+        <option value="Dec">Feb</option>
       </select>
-      <select name="birthday">
-        <option value="year">Year</option>
+      <select name="year">
+        <option value="">Year</option>
+        <!-- Adding years from 1960 to 2024 -->
+        <option value="1960">1960</option>
+        <option value="1961">1961</option>
         <!-- Add more options for years -->
+        <option value="2024">2024</option>
       </select>
       <br>
       <input type="submit" value="Sign Up" style="width: 100%; padding: 10px; background-color: magenta; color: white; border: none; border-radius: 5px; cursor: pointer;">
@@ -106,19 +114,10 @@
 </div>
 
 <script>
-  const signupLink = document.getElementById("signupLink");
   const loginLink = document.getElementById("loginLink");
   const signupContainer = document.getElementById("signupContainer");
-  const loginForm = document.getElementById("loginForm");
-  const signupForm = document.getElementById("signupForm");
-
-  signupLink.addEventListener("click", () => {
-    document.querySelector(".login-form").style.display = "none";
-    signupContainer.style.display = "block";
-  });
 
   loginLink.addEventListener("click", () => {
-    document.querySelector(".login-form").style.display = "block";
     signupContainer.style.display = "none";
   });
 </script>
