--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!-- Adding days from 1 to 31 -->
         <option value="1">1</option>
         <option value="2">2</option>
-        <!-- Add more options for days -->
+        <!-- Continue adding options for days -->
         <option value="31">31</option>
       </select>
       <select name="month">
@@ -87,23 +87,15 @@
         <!-- Adding months from Jan to Dec -->
         <option value="Jan">Jan</option>
         <option value="Feb">Feb</option>
-        <option value="Mar">Mar</option>
-        <option value="Apr">Apr</option>
-        <option value="May">Feb</option>
-        <option value="Jun">Feb</option>
-        <option value="Jul">Feb</option>
-        <option value="Aug">Feb</option>
-        <option value="Sep">Feb</option>
-        <option value="Oct">Feb</option>
-        <option value="Nov">Feb</option>
-        <option value="Dec">Feb</option>
+        <!-- Continue adding options for months -->
+        <option value="Dec">Dec</option>
       </select>
       <select name="year">
         <option value="">Year</option>
         <!-- Adding years from 1960 to 2024 -->
         <option value="1960">1960</option>
         <option value="1961">1961</option>
-        <!-- Add more options for years -->
+        <!-- Continue adding options for years -->
         <option value="2024">2024</option>
       </select>
       <br>
