--- a/index.html
+++ b/index.html
@@ -57,7 +57,22 @@
 </style>
 </head>
 <body>
-<div class="container" id="signupContainer">
+<div class="container" id="loginSignupContainer">
+  <div class="login-heading">Log In</div>
+  <div class="form-box login-form">
+    <form id="loginForm">
+      <input type="text" placeholder="Username">
+      <br>
+      <input type="password" placeholder="Password">
+      <br>
+      <input type="submit" value="Log In" style="width: 100%; padding: 10px; background-color: magenta; color: white; border: none; border-radius: 5px; cursor: pointer;">
+    </form>
+  </div>
+  <div class="forgot-password"><a href="#">Forgot Password?</a></div>
+  <div class="signup-link">Don't have an account? <a href="#" id="signupLink">Sign Up</a></div>
+</div>
+
+<div class="container" id="signupContainer" style="display: none;">
   <div class="login-heading">Sign Up</div>
   <div class="form-box signup-form">
     <form id="signupForm">
@@ -77,10 +92,19 @@
 
 <script>
   const loginLink = document.getElementById("loginLink");
+  const signupLink = document.getElementById("signupLink");
+  const loginSignupContainer = document.getElementById("loginSignupContainer");
+  const loginContainer = document.getElementById("loginContainer");
   const signupContainer = document.getElementById("signupContainer");
 
   loginLink.addEventListener("click", () => {
-    signupContainer.style.display = "none";
+    loginSignupContainer.style.display = "none";
+    signupContainer.style.display = "block";
+  });
+
+  signupLink.addEventListener("click", () => {
+    loginSignupContainer.style.display = "none";
+    signupContainer.style.display = "block";
   });
 </script>
 </body>
