--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
   const signupContainer = document.getElementById("signupContainer");
 
   loginLink.addEventListener("click", () => {
-    loginSignupContainer.style.display = "none";
-    signupContainer.style.display = "block";
+    signupContainer.style.display = "none";
+    loginContainer.style.display = "block";
   });
 
   signupLink.addEventListener("click", () => {
-    loginSignupContainer.style.display = "none";
+    loginContainer.style.display = "none";
     signupContainer.style.display = "block";
   });
 </script>
