--- a/index.html
+++ b/index.html
@@ -57,22 +57,7 @@
 </style>
 </head>
 <body>
-<div class="container" id="loginSignupContainer">
-  <div class="login-heading">Log In</div>
-  <div class="form-box login-form">
-    <form id="loginForm">
-      <input type="text" placeholder="Username">
-      <br>
-      <input type="password" placeholder="Password">
-      <br>
-      <input type="submit" value="Log In" style="width: 100%; padding: 10px; background-color: magenta; color: white; border: none; border-radius: 5px; cursor: pointer;">
-    </form>
-  </div>
-  <div class="forgot-password"><a href="#">Forgot Password?</a></div>
-  <div class="signup-link">Don't have an account? <a href="#" id="signupLink">Sign Up</a></div>
-</div>
-
-<div class="container" id="signupContainer" style="display: none;">
+<div class="container" id="signupContainer">
   <div class="login-heading">Sign Up</div>
   <div class="form-box signup-form">
     <form id="signupForm">
@@ -84,6 +69,12 @@
       <br>
       <input type="password" placeholder="Confirm Password">
       <br>
+      Gender:
+      <input type="radio" id="male" name="gender" value="male"><label for="male">Male</label>
+      <input type="radio" id="female" name="gender" value="female"><label for="female">Female</label>
+    
+      </select>
+      <br>
       <input type="submit" value="Sign Up" style="width: 100%; padding: 10px; background-color: magenta; color: white; border: none; border-radius: 5px; cursor: pointer;">
     </form>
   </div>
@@ -92,19 +83,10 @@
 
 <script>
   const loginLink = document.getElementById("loginLink");
-  const signupLink = document.getElementById("signupLink");
-  const loginSignupContainer = document.getElementById("loginSignupContainer");
-  const loginContainer = document.getElementById("loginContainer");
   const signupContainer = document.getElementById("signupContainer");
 
   loginLink.addEventListener("click", () => {
     signupContainer.style.display = "none";
-    loginContainer.style.display = "block";
-  });
-
-  signupLink.addEventListener("click", () => {
-    loginContainer.style.display = "none";
-    signupContainer.style.display = "block";
   });
 </script>
 </body>
