--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 <div class="container">
-  <div class="login-heading">Log In</div> <!-- Added spaces before Log In -->
+  <div class="login-heading">Log In</div>
   <div class="form-box login-form">
     <form id="loginForm">
       <input type="text" placeholder="Gmail">
@@ -67,9 +67,9 @@
       <br>
       <input type="submit" value="Login" style="width: 100%; padding: 10px; background-color: magenta; color: white; border: none; border-radius: 5px; cursor: pointer;">
       <br>
-      <div class="forgot-password"><a href="#">Forgot Password?</a></div>
     </form>
   </div>
+  <div class="forgot-password"><a href="#">Forgot Password?</a></div>
   <div class="forgot-password"><a href="#" id="signupLink">Don't Have an account? Sign Up</a></div>
 </div>
 
@@ -81,11 +81,11 @@
       <br>
       <input type="text" placeholder="New E-mail">
       <br>
-      <input type="password" placeholder="Password (min 8 characters, uppercase, special symbol, number)">
+      <input type="password" placeholder="Password (min 8 characters)">
       <br>
       <input type="password" placeholder="Confirm Password">
       <br>
-      <input type="submit" value="Sign Up" style="width: 100%; padding: 10px; background-color: magenta; color: white; border: none; border-radius: 5px; cursor: pointer;">
+      <input type="submit" value="Sign Up" style="width: 100%; padding: 10px; background-color: purple; color: white; border: none; border-radius: 5px; cursor: pointer;">
     </form>
   </div>
   <div class="forgot-password"><a href="#" id="loginLink">Already have an account? Log In</a></div>
