--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <input type="checkbox" id="remember"> <label for="remember" style="margin-left: 5px;">Remember Password</label>
       </div>
       <br>
-      <input type="submit" value="Login" style="width: 100%; padding: 10px; background-color: magenta; color: white; border: none; border-radius: 5px; cursor: pointer;">
+      <input type="submit" value="Login" style="width: 100%; padding: 10px; background-color: purple; color: white; border: none; border-radius: 5px; cursor: pointer;">
       <br>
+  <div class="forgot-password"><a href="#">Forgot Password?</a></div>
+  <div class="forgot-password"><a href="#" id="signupLink">Don't Have an account? Sign Up</a>
     </form>
   </div>
-  <div class="forgot-password"><a href="#">Forgot Password?</a></div>
-  <div class="forgot-password"><a href="#" id="signupLink">Don't Have an account? Sign Up</a></div>
-</div>
+
 
 <div class="container" style="display: none;" id="signupContainer">
   <div class="login-heading">Sign Up</div>
