--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
       <br>
       <input type="submit" value="Login" style="width: 100%; padding: 10px; background-color: purple; color: white; border: none; border-radius: 5px; cursor: pointer;">
       <br>
-  <div class="forgot-password"><a href="#">Forgot Password?</a></div>
-  <div class="forgot-password"><a href="#" id="signupLink">Don't Have an account? Sign Up</a>
     </form>
   </div>
-
+  <div class="forgot-password"><a href="#">Forgot Password?</a></div>
+  <div class="forgot-password"><a href="#" id="signupLink">Don't Have an account? Sign Up</a></div>
+</div>
 
 <div class="container" style="display: none;" id="signupContainer">
   <div class="login-heading">Sign Up</div>
