--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <input type="checkbox" id="remember"> <label for="remember" style="margin-left: 5px;">Remember Password</label>
       </div>
       <br>
-      <input type="submit" value="Login" style="width: 100%; padding: 10px; background-color: purple; color: white; border: none; border-radius: 5px; cursor: pointer;">
+      <input type="submit" value="Login" style="width: 100%; padding: 10px; background-color: magenta; color: white; border: none; border-radius: 5px; cursor: pointer;">
       <br>
     </form>
   </div>
