--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
       <br>
     </form>
   </div>
+  <div>
   <div class="forgot-password"><a href="#">Forgot Password?</a></div>
   <div class="forgot-password"><a href="#" id="signupLink">Don't Have an account? Sign Up</a></div>
 </div>
 
-<div class="container" style="display: none;" id="signupContainer">
+<div class="container" id="signupContainer">
   <div class="login-heading">Sign Up</div>
   <div class="form-box signup-form">
     <form id="signupForm">
@@ -81,11 +82,11 @@
       <br>
       <input type="text" placeholder="New E-mail">
       <br>
-      <input type="password" placeholder="Password (min 8 characters)">
+      <input type="password" placeholder="Password (min 8 characters, uppercase, special symbol, number)">
       <br>
       <input type="password" placeholder="Confirm Password">
       <br>
-      <input type="submit" value="Sign Up" style="width: 100%; padding: 10px; background-color: purple; color: white; border: none; border-radius: 5px; cursor: pointer;">
+      <input type="submit" value="Sign Up" style="width: 100%; padding: 10px; background-color: magenta; color: white; border: none; border-radius: 5px; cursor: pointer;">
     </form>
   </div>
   <div class="forgot-password"><a href="#" id="loginLink">Already have an account? Log In</a></div>
