--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 <div class="container">
-  <div class="login-heading">Log In</div>
+  <div class="login-heading">Log In</div> <!-- Added spaces before Log In -->
   <div class="form-box login-form">
     <form id="loginForm">
       <input type="text" placeholder="Gmail">
@@ -67,12 +67,13 @@
       <br>
       <input type="submit" value="Login" style="width: 100%; padding: 10px; background-color: magenta; color: white; border: none; border-radius: 5px; cursor: pointer;">
       <br>
+      <div class="forgot-password"><a href="#">Forgot Password?</a></div>
     </form>
-  <div class="forgot-password"><a href="#">Forgot Password?</a></div>
+  </div>
   <div class="forgot-password"><a href="#" id="signupLink">Don't Have an account? Sign Up</a></div>
 </div>
 
-<div class="container" id="signupContainer">
+<div class="container" style="display: none;" id="signupContainer">
   <div class="login-heading">Sign Up</div>
   <div class="form-box signup-form">
     <form id="signupForm">
