--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       <br>
     </form>
   </div>
-  <div class="forgot-password"><a href="#">Forgot Password?</a></div>
-  <div class="forgot-password"><a href="#" id="signupLink">Don't Have an account? Sign Up</a></div>
+  <div class="forgot-password"> <a href="#">Forgot Password?</a></div>
+  <div class="forgot-password"> <a href="#" id="signupLink">Don't Have an account? Sign Up</a></div>
 </div>
 
 <div class="container" style="display: none;" id="signupContainer">
@@ -104,8 +104,8 @@
   });
 
   loginLink.addEventListener("click", () => {
-    document.querySelector(".login-form").style.display = "block";
-    signupContainer.style.display = "none";
+    document.querySelector(".login-form").style.display = "none";
+    signupContainer.style.display = "block";
   });
 </script>
 </body>
