--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </style>
 </head>
 <body>
-<div class="container">
+<div class="container" style="display: none;">
   <div class="login-heading">Log In</div> <!-- Added spaces before Log In -->
   <div class="form-box login-form">
     <form id="loginForm">
