--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-image: url('path/to/your/background/image.jpg');
+    background-image: url('https://raw.githubusercontent.com/Peterson-Arkin-De-Leon/Index.html/main/Trtr.jpg');
     background-size: cover;
     background-position: center;
     margin: 0;
