--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Log In</title>
 <style>
   body {
-    font-family: Arial, sans-serif;
+    font-family: "Times New Roman", Times, serif;
     background-image: url('https://raw.githubusercontent.com/Peterson-Arkin-De-Leon/Index.html/main/Trtr.jpg');
     background-size: cover;
     background-position: center;
@@ -48,7 +48,7 @@
   .forgot-password {
     margin-top: 20px;
     font-size: 14px;
-    color: blue;
+    color: violet;
   }
 </style>
 </head>
