--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
     margin: 100px auto;
     text-align: center;
     color: white;
+     font-family: "Times New Roman", Times, serif;
   }
   .login-heading {
     font-weight: bold;
     font-size: 36px;
-    color: magenta;
+    color: violet;
     margin-bottom: 30px;
+     font-family: "Times New Roman", Times, serif;
   }
   .form-box {
-    background-color: magenta;
+    background-color: dark violet;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -39,16 +41,19 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
+    font-family: "Times New Roman", Times, serif;
   }
   .form-box input[type="checkbox"] {
     width: auto;
     margin-right: 5px;
     vertical-align: middle;
+    font-family: "Times New Roman", Times, serif;
   }
   .forgot-password {
     margin-top: 20px;
     font-size: 14px;
     color: violet;
+     font-family: "Times New Roman", Times, serif;
   }
 </style>
 </head>
