--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      font-family: "Times New Roman", Times, serif;
   }
   .form-box {
-    background-color: dark violet;
+    background-color: purple;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
